<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/fons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sumar"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:onClick="sumar"
                android:text="@string/sumar" />


            <Button
                android:id="@+id/restar"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:onClick="resta"
                android:text="@string/restar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/augmentar"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:onClick="aumentar"
                android:text="@string/augmentar" />

            <Button
                android:id="@+id/disminuir"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:onClick="disminuir"
                android:text="@string/disminuir" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/amagar"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:onClick="amagar"
                android:text="@string/amagar" />

            <Button
                android:id="@+id/mostrar"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/mostrar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/colort"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:onClick="colorText"
                android:text="@string/colort" />

            <Button
                android:id="@+id/colorf"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
                android:layout_weight="1"
                android:onClick="colorFons"
                android:text="@string/colorf" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>